# web_wcag_agent

./: .env  Dockerfile  README.md  WCAG_AGENT_APP_TARGETS.md  live_scan.py  pyproject.toml  readme2.md  wcag_web_agent_checklist.xlsx
Report Gen/: HDFC_SKY_App_Signup_screens_DAO_WCAG_Audit_Report.xlsx  HDFC_SKY_App_Signup_screens_DAO_WCAG_Audit_Report_boost_5.xlsx  HDFC_SKY_UAT_Login_PostLogin_WCAG_Audit_Report.xlsx  HDFC_Sky_UAT_-_Demat_Account_Creation_WCAG_Audit_Report.xlsx  HDFC_WealthSpectrum_UAT_Login_PostLogin_WCAG_Audit_Report.xlsx  ICICI_Direct_Alpha_WCAG_Audit_Report.xlsx  ICICI_Direct_iLearn_WCAG_Audit_Report.xlsx  ICICI_Direct_iLearn_WCAG_Audit_Report_20260317.xlsx  generate_custom_report.py  generate_lic_website_report.py  generate_report.py  generate_report_merged.py
config/: hdfc_sky_login.json  hdfc_wealthspectrum_uat.json  ksl_kinsite.json  ksl_neo.json  licmf_corporate_website.json  licmf_investor_portal.json
k8s/: scan-job.yaml
src/accessibility_langgraph_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/accessibility_scanner/: __init__.py  checklist_registry.py  checklist_reports.py  checkpoints.py  cli.py  crawler.py  engine.py  html_utils.py  (+7 more)
tests/: test_annotator.py  test_bucket_integration.py  test_checklist_registry.py  test_checkpoint_overrides.py  test_contrast_worker.py  test_cv_resolution.py  test_explore_fallback.py  test_graph_integration.py  test_hdfc_wealthspectrum_uat.py  test_ksl_configs.py  test_policy.py  test_report_outputs.py  test_screen_analyzer_completeness.py  test_url_utils.py
(+27 files in other folders)
