[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "accessibility-langgraph-scanner"
version = "0.1.0"
description = "WCAG 2.1 government-style accessibility scanner built with LangGraph"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "langgraph>=0.2.0",
  "playwright>=1.45.0",
  "litellm>=1.47.0",
  "python-dotenv>=1.0.0",
  "openai>=1.0.0",
  "openpyxl>=3.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
wcag-scanner = "accessibility_scanner.cli:main"
wcag-agent = "accessibility_scanner.agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
